loader-server side log browsing is enabled. Fixed bugs where loadger-agent logs were not being printed at all : use slf4j instead of log4j directly and logback is eating away the logs if we use log4j. Now loader-agent run loader job process using script style exec : allows you to use pipes in scripts.